Small change in movie form

--- a/src/main/resources/templates/movie.html
+++ b/src/main/resources/templates/movie.html
@@ -26,7 +26,7 @@
     <p style="font-size: 160%" th:text="${movie.genre}">super gatunek filmu</p>
     <h3>Opis:</h3>
     <div class="wrap">
-    <p style="font-size: 160%" th:text="${movie.description}">film opowiada o najlepszej grze komputerowej w dziejach ludzkosci jest polecany do ogladania dla psow i kotw niczym sratatata nie przerywaj linii</p>
+    <p style="font-size: 160%" th:text="${movie.description}">super opis filmu</p>
     </div>
     <h3>GDZIE OBEJRZEĆ:</h3>
 
