--- a/src/main/resources/templates/movieform.html
+++ b/src/main/resources/templates/movieform.html
@@ -15,20 +15,20 @@
             <input type="text" class="form-control" th:field="*{title}"/>
         </div>
         <div class="form-group">
-            <label class="control-label">Gatunek</label>
+            <label class="control-label">Gatunek:</label>
             <input type="text" class="form-control" th:field="*{genre}"/>
         </div>
         <div class="form-group">
-            <label class="control-label">Opis</label>
+            <label class="control-label">Opis:</label>
             <input type="text" class="form-control" th:field="*{description}"/>
         </div>
-        <div align="center">
-            <button type="submit" class="btn btn-default">Dodaj</button>
+        <div align="center" class="form-horizontal">
+            <button type="submit">Dodaj</button>
         </div>
     </form>
-    <div align="center">
-        <a th:href="@{/movies}">Wróć</a>
-    </div>
+    <form style="padding-top: 5px" class="form-horizontal" th:action="@{/movies}" th:method="get">
+        <button type="submit">Anuluj</button>
+    </form>
 </div>
 </body>
 </html>
