--- a/src/main/resources/templates/movieform.html
+++ b/src/main/resources/templates/movieform.html
@@ -11,23 +11,26 @@
     <h2>DODAJ FILM</h2>
     <form class="form-horizontal" th:object="${movie}" th:action="@{/movies}" th:method="post">
         <div class="form-group">
-            <label class="control-label">Tytuł:</label>
+            <label class="control-label" style="font-size: 20px; font-weight: bold">Tytuł:</label>
             <input type="text" class="form-control" th:field="*{title}"/>
+            <p th:if="${#fields.hasErrors('title')}" th:errors="*{title}"/>
         </div>
         <div class="form-group">
-            <label class="control-label">Gatunek:</label>
+            <label class="control-label" style="font-size: 20px; font-weight: bold">Gatunek:</label>
             <input type="text" class="form-control" th:field="*{genre}"/>
+            <p th:if="${#fields.hasErrors('genre')}" th:errors="*{genre}"/>
         </div>
         <div class="form-group">
-            <label class="control-label">Opis:</label>
+            <label class="control-label" style="font-size: 20px; font-weight: bold">Opis:</label>
             <input type="text" class="form-control" th:field="*{description}"/>
+            <p th:if="${#fields.hasErrors('description')}" th:errors="*{description}"/>
         </div>
         <div align="center" class="form-horizontal">
-            <button type="submit">Dodaj</button>
+            <button type="submit" class="btn btn-default">Dodaj</button>
         </div>
     </form>
     <form style="padding-top: 5px" class="form-horizontal" th:action="@{/movies}" th:method="get">
-        <button type="submit">Anuluj</button>
+        <button type="submit" class="btn btn-default">Anuluj</button>
     </form>
 </div>
 </body>
