--- a/src/main/resources/templates/cinemas.html
+++ b/src/main/resources/templates/cinemas.html
@@ -15,6 +15,7 @@
                 <td><h5>Nazwa</h5></td>
                 <td><h5>Adres</h5></td>
                 <td><h5>Telefon</h5></td>
+                <td><h5>Spodziewany przychód</h5></td>
                 <td><h5>Repertuar</h5></td>
                 <td><h5>Usuń kino</h5></td>
             </tr>
@@ -24,6 +25,7 @@
             <td th:text="${cinema.name}"></td>
             <td th:text="${cinema.adress}"></td>
             <td th:text="${cinema.telephone}"></td>
+            <td th:text="${cinema.getExpectedIncome()}"></td>
             <td>Wkrótce!</td>
             <td><a th:href="${'cinema/delete/'+ cinema.id}">Usuń</a></td>
         </tr>
