Changed view to display free seats instead of total

--- a/src/main/resources/templates/moviescreenings.html
+++ b/src/main/resources/templates/moviescreenings.html
@@ -20,7 +20,7 @@
         <tr>
             <td th:text="${screening.cinema.name}"></td>
             <td th:text="${screening.startTime}"></td>
-            <td th:text="${screening.seatsTotal}"></td>
+            <td th:text="${screening.seatsFree}"></td>
             <td>Wkrótce</td>
         </tr>
         </tbody>
