Small change in button action

--- a/src/main/resources/templates/cinemaform.html
+++ b/src/main/resources/templates/cinemaform.html
@@ -29,7 +29,7 @@
             <button type="submit" class="btn btn-default">Dodaj</button>
         </div>
     </form>
-    <form style="padding-top: 5px" class="form-horizontal" th:action="@{/movies}" th:method="get">
+    <form style="padding-top: 5px" class="form-horizontal" th:action="@{/cinemas}" th:method="get">
         <button type="submit" class="btn btn-default">Anuluj</button>
     </form>
 </div>
