--- a/src/main/resources/templates/cinemas.html
+++ b/src/main/resources/templates/cinemas.html
@@ -28,7 +28,7 @@
             <td th:text="${cinema.telephone}"></td>
             <td th:text="${cinema.getExpectedIncome()}"></td>
             <td>Wkrótce!</td>
-            <td><a th:href="${'/addscr?id='+ cinema.id}">Dodaj</a></td>
+            <td><a th:href="${'/addscr/'+ cinema.id}">Dodaj</a></td>
             <td><a th:href="${'cinema/delete/'+ cinema.id}">Usuń</a></td>
         </tr>
     </tbody>
